--- a/.shrc
+++ b/.shrc
@@ -126,6 +126,9 @@ case "${OSTYPE}" in
 		alias pip_upgrade="test -z \"\${VIRTUAL_ENV}\" || pip list --outdated --format=freeze | sed -rn -e '/^(-e|evdev|spyder|isort|lazy-object-proxy)/d' -e 's/=.*//p' | xargs pip install --upgrade"
 		alias pip_upgrade_list="test -z \"\${VIRTUAL_ENV}\" || pip list --outdated --format=freeze | sed -rn -e '/^-e/d'"
 
+		alias ghce='gh copilot explain'
+		alias ghcs='gh copilot suggest -t shell'
+
 		#alias jmail="${PREFIX}/bin/doas /usr/sbin/jexec mail /usr/bin/su -l ${USER}"
 		#alias hast1="${PREFIX}/bin/doas /sbin/hastctl status -c /etc/hast1.conf"
 		#alias hast2="${PREFIX}/bin/doas /sbin/hastctl status -c /etc/hast2.conf"
@@ -138,7 +141,7 @@ esac
 alias m='/usr/bin/less --no-init --chop-long-lines --RAW-CONTROL-CHARS'
 if [ -x "${PREFIX}/bin/bat" ]; then
 	alias m="${PREFIX}/bin/bat --pager '/usr/bin/less --no-init --chop-long-lines --RAW-CONTROL-CHARS' --color=always --theme=ansi --plain --wrap never"
-	alias cat="${PREFIX}/bin/bat --pager '/usr/bin/less --no-init --chop-long-lines --RAW-CONTROL-CHARS --quit-if-one-screen' --theme=ansi --plain"
+	#alias cat="${PREFIX}/bin/bat --pager '/usr/bin/less --no-init --chop-long-lines --RAW-CONTROL-CHARS --quit-if-one-screen' --theme=ansi --plain --"
 fi
 
 test -x "${PREFIX}/bin/eza" && alias l="${PREFIX}/bin/eza --long --group-directories-first --bytes" || alias l='/bin/ls -lGp'
