--- a/.shrc
+++ b/.shrc
@@ -83,6 +83,7 @@ case "${OSTYPE}" in
 
 		alias doas='/usr/bin/sudo'
 		alias sd='/usr/bin/sudo /usr/bin/mc'
+		alias e='/usr/bin/mc --no-x11 --nomouse --slow --edit'
 		unalias ll 2>/dev/null
 		;;
 	*) # freebsd including /bin/sh is run
